# textual_router

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
tests/: test_router.py
textual_router/: router.py
